[package]
name = "nuxt-auto-import-replacer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nuxt-auto-import-replacer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
rayon = "1.10.0"
regex = "1.0.0"
swc_common = "6.1.0"
swc_ecma_ast = "6.1.0"
swc_ecma_parser = "8.0.1"
swc_ecma_transforms = "10.0.0"
swc_ecma_visit = "6.0.0"
swc_ecma_codegen = "6.0.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.16.0"
